sidebar active status front done

--- a/admin.html
+++ b/admin.html
@@ -30,21 +30,21 @@
 			<!-- sidebar -->
 			<div class="col-sm-3 col-md-2 sidebar">
 				<!-- nav tabs -->
-				<ul class="nav nav-tabs nav-pills nav-stacked">
+				<ul class="nav nav-pills nav-stacked">
 					<li role="presentation" class="active">
-						<a href="#index" data-toggle="tab" class="list-group-item" aria-controls="index">User Search</a>
+						<a href="#index" class="list-group-item" aria-controls="index">User Search</a>
 					</li>
 					<li role="presentation">
-						<a href="#user-add" data-toggle="tab" class="list-group-item" aria-controls="user-add">User Add</a>
+						<a href="#user-add" class="list-group-item" aria-controls="user-add">User Add</a>
 					</li>
 					<li role="presentation">
-						<a href="#pass-cha" data-toggle="tab" class="list-group-item">Password Change</a>
+						<a href="#pass-cha" class="list-group-item">Password Change</a>
 					</li>
 					<li role="presentation">
-						<a href="#watch-dis" data-toggle="tab" class="list-group-item">Watch Disable</a>
+						<a href="#user-dis" class="list-group-item">User Disable</a>
 					</li>
 					<li role="presentation">
-						<a href="#user-dis" data-toggle="tab" class="list-group-item">User Disable</a>
+						<a href="#watch-dis" class="list-group-item">Watch Disable</a>
 					</li>
 				</ul>
 			</div>
