--- a/admin.html
+++ b/admin.html
@@ -22,7 +22,7 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Language(<span data-lang="now">English</span>)<span
 							class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
-						<li><a data-lang="chinese" href="#">[简体]Chinese</a></li>
+						<li><a data-lang="chinese" href="#">[中文]Chinese</a></li>
 						<li><a data-lang="english" href="#">[English]English</a></li>
 						<li><a data-lang="spanish" href="#">[Español]Spanish</a></li>
 					</ul>
@@ -156,15 +156,15 @@
 						<table class="table table-hover">
 							<thead>
 							<tr>
-								<th data-locale="th-1">Parent username</th>
-								<th data-locale="th-2">Parent No</th>
-								<th data-locale="th-3">Pid</th>
-								<th data-locale="th-4">Kid</th>
-								<th data-locale="th-5">Kid No</th>
-								<th data-locale="th-6">IMEI</th>
-								<th data-locale="th-7">Relationship</th>
-								<th data-locale="th-8">Nickname</th>
-								<th data-locale="th-9">QRCode</th>
+								<th data-locale="th-0">Parent Username</th>
+								<th data-locale="th-1">Parent No</th>
+								<th data-locale="th-2>Pid</th>
+								<th data-locale="th-3">Kid</th>
+								<th data-locale="th-4">Kid No</th>
+								<th data-locale="th-5">IMEI</th>
+								<th data-locale="th-6">Relationship</th>
+								<th data-locale="th-7">Nickname</th>
+								<th data-locale="th-8">QRCode</th>
 							</tr>
 							</thead>
 							<tbody>
